--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="home" class="flexCenter flexColumn">
             <h1>Formula 1 Quiz</h1>
             <a class="button" href="game.html">Start quiz</a>
+            <a class="button" href="highscores.html">High Scores</a>
         </div>
     </div>
     
